--- a/AndroidStudio/Primera_app/app/src/main/res/layout/activity_main.xml
+++ b/AndroidStudio/Primera_app/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="white"
     tools:context=".MainActivity">
 
     <TextView
@@ -34,6 +33,7 @@
         android:layout_marginEnd="50dp"
         android:layout_marginRight="50dp"
         android:ems="10"
+        android:hint="@string/txt_num1"
         android:inputType="number"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -50,6 +50,7 @@
         android:layout_marginEnd="50dp"
         android:layout_marginRight="50dp"
         android:ems="10"
+        android:hint="@string/txt_num2"
         android:inputType="number"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -58,7 +59,7 @@
         app:layout_constraintTop_toBottomOf="@+id/txt_num1" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/button_suma"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
@@ -66,6 +67,7 @@
         android:layout_marginTop="48dp"
         android:layout_marginEnd="50dp"
         android:layout_marginRight="50dp"
+        android:onClick="suma"
         android:text="Suma"
         android:textColor="#000000"
         android:textSize="18sp"
@@ -82,11 +84,12 @@
         android:layout_marginTop="72dp"
         android:layout_marginEnd="50dp"
         android:layout_marginRight="50dp"
-        android:text="TextView"
+        android:text="Resultado"
         android:textColor="#3F51B5"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:layout_constraintTop_toBottomOf="@+id/button_suma" />
 
     <TextView
         android:id="@+id/textView5"
@@ -97,7 +100,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="50dp"
         android:layout_marginRight="50dp"
-        android:text="First APP"
+        android:text="INTRODUZCA SUMA"
         android:textColor="#000000"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
