Mejorado diseño de main activity la de login y RegistrarActivity

--- a/AndroidStudio/final_app/app/src/main/res/layout/activity_registrar.xml
+++ b/AndroidStudio/final_app/app/src/main/res/layout/activity_registrar.xml
@@ -9,14 +9,16 @@
     <EditText
         android:id="@+id/txt_nom_completo"
         android:layout_width="250dp"
-        android:layout_height="40dp"
+        android:layout_height="30dp"
         android:layout_marginStart="50dp"
         android:layout_marginLeft="50dp"
         android:layout_marginTop="50dp"
         android:layout_marginEnd="50dp"
         android:layout_marginRight="50dp"
         android:autofillHints=""
+        android:background="@drawable/edittext_background"
         android:ems="10"
+        android:gravity="center"
         android:hint="@string/txt_nom_completo"
         android:inputType="textPersonName"
         android:textSize="18sp"
@@ -28,14 +30,16 @@
     <EditText
         android:id="@+id/txt_empresa"
         android:layout_width="250dp"
-        android:layout_height="40dp"
+        android:layout_height="30dp"
         android:layout_marginStart="50dp"
         android:layout_marginLeft="50dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="50dp"
         android:layout_marginRight="50dp"
         android:autofillHints=""
+        android:background="@drawable/edittext_background"
         android:ems="10"
+        android:gravity="center"
         android:hint="@string/txt_empresa"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,31 +49,36 @@
     <EditText
         android:id="@+id/txt_password2"
         android:layout_width="250dp"
-        android:layout_height="40dp"
+        android:layout_height="30dp"
         android:layout_marginStart="50dp"
         android:layout_marginLeft="50dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="50dp"
         android:layout_marginRight="50dp"
         android:autofillHints=""
+        android:background="@drawable/edittext_background"
         android:ems="10"
+        android:gravity="center"
         android:hint="@string/txt_password_confirm"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_password" />
 
     <EditText
         android:id="@+id/txt_password"
         android:layout_width="250dp"
-        android:layout_height="40dp"
+        android:layout_height="30dp"
         android:layout_marginStart="50dp"
         android:layout_marginLeft="50dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="50dp"
         android:layout_marginRight="50dp"
         android:autofillHints=""
+        android:background="@drawable/edittext_background"
         android:ems="10"
+        android:gravity="center"
         android:hint="@string/txt_password"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
@@ -79,14 +88,16 @@
     <EditText
         android:id="@+id/txt_new_usuario"
         android:layout_width="250dp"
-        android:layout_height="40dp"
+        android:layout_height="30dp"
         android:layout_marginStart="50dp"
         android:layout_marginLeft="50dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="50dp"
         android:layout_marginRight="50dp"
         android:autofillHints=""
+        android:background="@drawable/edittext_background"
         android:ems="10"
+        android:gravity="center"
         android:hint="@string/txt_new_usuario"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
@@ -96,14 +107,16 @@
     <EditText
         android:id="@+id/txt_puesto_trabajo"
         android:layout_width="250dp"
-        android:layout_height="40dp"
+        android:layout_height="30dp"
         android:layout_marginStart="50dp"
         android:layout_marginLeft="50dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="50dp"
         android:layout_marginRight="50dp"
         android:autofillHints=""
+        android:background="@drawable/edittext_background"
         android:ems="10"
+        android:gravity="center"
         android:hint="@string/txt_puesto_trabajo"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
@@ -117,12 +130,13 @@
         android:layout_height="40dp"
         android:layout_marginStart="50dp"
         android:layout_marginLeft="50dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="15dp"
         android:layout_marginEnd="50dp"
         android:layout_marginRight="50dp"
         android:onClick="add_user"
         android:text="@string/bt_registrar"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_password2" />
 
@@ -132,13 +146,103 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
         android:layout_marginLeft="50dp"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="120dp"
         android:layout_marginEnd="50dp"
         android:layout_marginRight="50dp"
         android:text="@string/created"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_password2" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="175dp"
+        android:layout_marginLeft="175dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="273dp"
+        android:layout_marginRight="273dp"
+        android:text="@string/tv_nom_completo"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="97dp"
+        android:layout_marginLeft="97dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="273dp"
+        android:layout_marginRight="273dp"
+        android:text="@string/tv_empresa"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt_nom_completo" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="141dp"
+        android:layout_marginLeft="141dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="273dp"
+        android:layout_marginRight="273dp"
+        android:text="@string/tv_puesto_trabajo"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt_empresa" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="87dp"
+        android:layout_marginLeft="87dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="273dp"
+        android:layout_marginRight="273dp"
+        android:text="@string/tv_new_usuario"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt_puesto_trabajo" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="102dp"
+        android:layout_marginLeft="102dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="271dp"
+        android:layout_marginRight="271dp"
+        android:text="@string/tv_password"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt_new_usuario" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="187dp"
+        android:layout_marginLeft="187dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="272dp"
+        android:layout_marginRight="272dp"
+        android:text="@string/tv_password_confirm"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt_password" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
