--- a/AndroidStudio/final_app/app/src/main/res/layout/activity_main.xml
+++ b/AndroidStudio/final_app/app/src/main/res/layout/activity_main.xml
@@ -4,21 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#293242"
     tools:context=".MainActivity">
 
     <EditText
         android:id="@+id/txt_usuario"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
-        android:gravity="center"
         android:layout_marginStart="50dp"
         android:layout_marginLeft="50dp"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="180dp"
         android:layout_marginEnd="50dp"
         android:layout_marginRight="50dp"
         android:autofillHints=""
         android:background="@drawable/edittext_background"
         android:ems="10"
+        android:gravity="center"
         android:hint="@string/txt_usuario"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
@@ -46,15 +47,17 @@
 
     <Button
         android:id="@+id/bt_validar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="140dp"
+        android:layout_height="30dp"
         android:layout_marginStart="50dp"
         android:layout_marginLeft="50dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="50dp"
         android:layout_marginRight="50dp"
+        android:background="@drawable/button_background"
         android:onClick="Validar"
         android:text="@string/bt_validar"
+        android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_password" />
@@ -70,6 +73,7 @@
         android:layout_marginEnd="50dp"
         android:layout_marginRight="50dp"
         android:text="@string/created"
+        android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
@@ -77,15 +81,17 @@
 
     <Button
         android:id="@+id/bt_registrar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="140dp"
+        android:layout_height="30dp"
         android:layout_marginStart="50dp"
         android:layout_marginLeft="50dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="50dp"
         android:layout_marginRight="50dp"
+        android:background="@drawable/button_background"
         android:onClick="crear_cuenta"
         android:text="@string/bt_registrar"
+        android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/bt_validar" />
@@ -96,10 +102,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="102dp"
         android:layout_marginLeft="102dp"
-        android:layout_marginTop="116dp"
+        android:layout_marginTop="150dp"
         android:layout_marginEnd="252dp"
         android:layout_marginRight="252dp"
         android:text="@string/tv_usuario"
+        android:textColor="#FFFFFF"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.23"
@@ -116,6 +123,7 @@
         android:layout_marginEnd="252dp"
         android:layout_marginRight="252dp"
         android:text="@string/tv_password"
+        android:textColor="#FFFFFF"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
