--- a/AndroidStudio/final_app/app/src/main/res/layout/activity_main.xml
+++ b/AndroidStudio/final_app/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#293242"
+    android:background="#455A64"
     tools:context=".MainActivity">
 
     <EditText
@@ -47,7 +47,7 @@
 
     <Button
         android:id="@+id/bt_validar"
-        android:layout_width="140dp"
+        android:layout_width="150dp"
         android:layout_height="30dp"
         android:layout_marginStart="50dp"
         android:layout_marginLeft="50dp"
@@ -81,7 +81,7 @@
 
     <Button
         android:id="@+id/bt_registrar"
-        android:layout_width="140dp"
+        android:layout_width="150dp"
         android:layout_height="30dp"
         android:layout_marginStart="50dp"
         android:layout_marginLeft="50dp"
