--- a/AndroidStudio/final_app/app/src/main/res/layout/activity_registrar.xml
+++ b/AndroidStudio/final_app/app/src/main/res/layout/activity_registrar.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#455A64"
     tools:context=".RegistrarActivity">
 
     <EditText
@@ -20,6 +21,7 @@
         android:ems="10"
         android:gravity="center"
         android:hint="@string/txt_nom_completo"
+        android:textColor="#FFFFFF"
         android:inputType="textPersonName"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -41,6 +43,7 @@
         android:ems="10"
         android:gravity="center"
         android:hint="@string/txt_empresa"
+        android:textColor="#FFFFFF"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -60,6 +63,7 @@
         android:ems="10"
         android:gravity="center"
         android:hint="@string/txt_password_confirm"
+        android:textColor="#FFFFFF"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.491"
@@ -80,6 +84,7 @@
         android:ems="10"
         android:gravity="center"
         android:hint="@string/txt_password"
+        android:textColor="#FFFFFF"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -99,6 +104,7 @@
         android:ems="10"
         android:gravity="center"
         android:hint="@string/txt_new_usuario"
+        android:textColor="#FFFFFF"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -118,6 +124,7 @@
         android:ems="10"
         android:gravity="center"
         android:hint="@string/txt_puesto_trabajo"
+        android:textColor="#FFFFFF"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -134,7 +141,9 @@
         android:layout_marginEnd="50dp"
         android:layout_marginRight="50dp"
         android:onClick="add_user"
+        android:background="@drawable/button_background"
         android:text="@string/bt_registrar"
+        android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
@@ -150,6 +159,7 @@
         android:layout_marginEnd="50dp"
         android:layout_marginRight="50dp"
         android:text="@string/created"
+        android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_password2" />
@@ -164,6 +174,7 @@
         android:layout_marginEnd="273dp"
         android:layout_marginRight="273dp"
         android:text="@string/tv_nom_completo"
+        android:textColor="#FFFFFF"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -179,6 +190,7 @@
         android:layout_marginEnd="273dp"
         android:layout_marginRight="273dp"
         android:text="@string/tv_empresa"
+        android:textColor="#FFFFFF"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -194,6 +206,7 @@
         android:layout_marginEnd="273dp"
         android:layout_marginRight="273dp"
         android:text="@string/tv_puesto_trabajo"
+        android:textColor="#FFFFFF"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -209,6 +222,7 @@
         android:layout_marginEnd="273dp"
         android:layout_marginRight="273dp"
         android:text="@string/tv_new_usuario"
+        android:textColor="#FFFFFF"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -224,6 +238,7 @@
         android:layout_marginEnd="271dp"
         android:layout_marginRight="271dp"
         android:text="@string/tv_password"
+        android:textColor="#FFFFFF"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -239,6 +254,7 @@
         android:layout_marginEnd="272dp"
         android:layout_marginRight="272dp"
         android:text="@string/tv_password_confirm"
+        android:textColor="#FFFFFF"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
