Realizado codigo fichar para poder tener registro de entrada y salida de trabajo

--- a/AndroidStudio/final_app/app/src/main/res/layout/activity_fichar.xml
+++ b/AndroidStudio/final_app/app/src/main/res/layout/activity_fichar.xml
@@ -39,4 +39,62 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/img_work_in"
+        android:layout_width="70dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="22dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginRight="50dp"
+        app:layout_constraintEnd_toStartOf="@+id/img_work_out"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_date"
+        app:srcCompat="@drawable/ic__in_work" />
+
+    <ImageView
+        android:id="@+id/img_work_out"
+        android:layout_width="70dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="19dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginRight="50dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/img_work_in"
+        app:layout_constraintTop_toBottomOf="@+id/tv_date"
+        app:srcCompat="@drawable/ic_baseline_work_off_24" />
+
+    <Button
+        android:id="@+id/bt_in"
+        android:layout_width="55dp"
+        android:layout_marginStart="49dp"
+        android:layout_marginLeft="49dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginRight="50dp"
+        android:onClick="click_in"
+        android:text="@string/bt_in"
+        app:layout_constraintEnd_toStartOf="@+id/bt_out"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/img_work_in"
+        android:layout_height="wrap_content" />
+
+    <Button
+        android:id="@+id/bt_out"
+        android:layout_width="55dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="49dp"
+        android:layout_marginRight="49dp"
+        android:onClick="click_out"
+        android:text="@string/bt_out"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/bt_in"
+        app:layout_constraintTop_toBottomOf="@+id/img_work_out" />
 </androidx.constraintlayout.widget.ConstraintLayout>
