--- a/AndroidStudio/final_app/app/src/main/res/layout/activity_main.xml
+++ b/AndroidStudio/final_app/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     android:background="#455A64"
     tools:context=".MainActivity">
 
+
     <EditText
         android:id="@+id/txt_usuario"
         android:layout_width="wrap_content"
@@ -72,8 +73,10 @@
         android:layout_marginTop="350dp"
         android:layout_marginEnd="50dp"
         android:layout_marginRight="50dp"
+        android:layout_marginBottom="142dp"
         android:text="@string/created"
         android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
