--- a/AndroidStudio/final_app/app/src/main/res/layout/activity_registrar.xml
+++ b/AndroidStudio/final_app/app/src/main/res/layout/activity_registrar.xml
@@ -152,8 +152,10 @@
         android:layout_marginTop="120dp"
         android:layout_marginEnd="50dp"
         android:layout_marginRight="50dp"
+        android:layout_marginBottom="20dp"
         android:text="@string/created"
         android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_password2" />
